--- a/Py CheckiO/Strings and Integers/Acceptable Password I/task-info.yaml
+++ b/Py CheckiO/Strings and Integers/Acceptable Password I/task-info.yaml
@@ -2,10 +2,11 @@ type: checkiO
 files:
 - name: mission.py
   visible: true
-  text: |
+  text: |-
     def is_acceptable_password(password: str) -> bool:
         # your code here
-        return False
+        return len(password) > 6 and True
+        # return False
 
 
     print("Example:")
@@ -18,11 +19,12 @@ files:
 
     print("The mission is done! Click 'Check Solution' to earn rewards!")
   learner_created: false
-status: Unchecked
-code: |
+status: Solved
+code: |-
   def is_acceptable_password(password: str) -> bool:
       # your code here
-      return False
+      return len(password) > 6 and True
+      # return False
 
 
   print("Example:")
@@ -34,4 +36,4 @@ code: |
   assert is_acceptable_password("ashort") == False
 
   print("The mission is done! Click 'Check Solution' to earn rewards!")
-seconds_from_change: 9223372036854775807
+seconds_from_change: 1
