Added solution to 'First Word (simplified)' task.

--- a/Py CheckiO/Strings and Integers/First Word (simplified)/task-info.yaml
+++ b/Py CheckiO/Strings and Integers/First Word (simplified)/task-info.yaml
@@ -19,7 +19,10 @@ files:
 
     print("The mission is done! Click 'Check Solution' to earn rewards!")
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: All tests passed
+  time: "Sat, 11 Mar 2023 15:31:03 UTC"
 code: |
   def first_word(text: str) -> str:
       # your code here
