--- a/Py CheckiO/Strings and Integers/Acceptable Password I/task-info.yaml
+++ b/Py CheckiO/Strings and Integers/Acceptable Password I/task-info.yaml
@@ -4,9 +4,8 @@ files:
   visible: true
   text: |-
     def is_acceptable_password(password: str) -> bool:
-        # your code here
-        return len(password) > 6 and True
-        # return False
+
+        return len(password) > 6
 
 
     print("Example:")
@@ -22,7 +21,6 @@ files:
 status: Solved
 code: |-
   def is_acceptable_password(password: str) -> bool:
-      # return len(password) > 6 and True
 
       return len(password) > 6
 
@@ -36,4 +34,4 @@ code: |-
   assert is_acceptable_password("ashort") == False
 
   print("The mission is done! Click 'Check Solution' to earn rewards!")
-seconds_from_change: 2634
+seconds_from_change: 1177
