--- a/Py CheckiO/Strings and Integers/Multiply (Intro)/task-info.yaml
+++ b/Py CheckiO/Strings and Integers/Multiply (Intro)/task-info.yaml
@@ -18,13 +18,12 @@ files:
   learner_created: false
 status: Solved
 code: |-
-  from operator import mul
+  # from operator import mul
 
 
   def mult_two(a: int, b: int) -> int:
-      # your code here
-      # return a * b
-      return mul(a, b)
+      return a * b
+      # return mul(a, b)
 
 
   print("Example")
@@ -34,4 +33,4 @@ code: |-
   assert mult_two(0, 1) == 0
 
   print("The first mission is done! Click 'Check' to earn cool rewards!")
-seconds_from_change: 4190
+seconds_from_change: 2242
