--- a/Py CheckiO/Strings and Integers/Fizz Buzz/task-info.yaml
+++ b/Py CheckiO/Strings and Integers/Fizz Buzz/task-info.yaml
@@ -19,7 +19,10 @@ files:
 
     print("The mission is done! Click 'Check Solution' to earn rewards!")
   learner_created: false
-status: Unchecked
+status: Solved
+feedback:
+  message: All tests passed
+  time: "Sat, 11 Mar 2023 16:31:32 UTC"
 code: |
   def checkio(number: int) -> str:
       # your code here
